--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -77,7 +77,7 @@ text-decoration: none;
 color: black;
 font-weight: bold;
 font-size:100%;
-background-color: white;
+background-color: #D8D8D8;
 background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
 background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
 background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
