--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -252,22 +252,36 @@ border: 2px;
 				<li><%= link_to "Search", {:controller => $master_user_name, :action => "search", :name => "search", :method => :post}%></li>
 				<li><%=link_to "Stories", :controller => $master_user_name, :action => "story", :id => @profile%></li>
 				<li><%=link_to "About Us", :controller => "real", :action => "aboutus", :id => @profile%></li>
+				
 				<%if $adminflag=="true"%>		
-				<li><%=link_to "Admin Home", :controller => "real", :action => "adminhome", :id => @profile%></li>
+					<li><%=link_to "Admin Home", :controller => "real", :action => "adminhome", :id => @profile%></li>
 				<%end%>
-		 <%if $userflag=="true"%>		
-				<li><%=link_to "My Stories", :controller => $master_user_name, :action => "storyview", :id => @profile,:mystories=>"mystories"%></li>
-		   
-			
-			 <li><%=link_to "Saved Properties", :controller => $master_user_name, :action => "homesearch", :id => @profile,:name => "R", :method => :post,:p_id=>@p_id%>	</li>
-		
-			<li><%=link_to "Change Password", :controller => $master_user_name, :action => "userchangepwd", :id => @profile%></li>
-		   
-			
-			 <li><%=link_to " Logout", :controller => $master_user_name, :action => "userlogout", :id => @profile,:name => "Residential", :method => :post%>	</li>
-			<%end%>
+				
+				     </ul>
+					
+				
+				<%if $userflag=="true"%>
+					<ul class="nav pull-right">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							My Account
+							<b class="caret"></b>
+							</a>
 							
-          </ul>
+							<ul class="dropdown-menu">
+								<li><%=link_to "My Stories", :controller => $master_user_name, :action => "storyview", :id => @profile,:mystories=>"mystories"%></li>
+								<li><%=link_to "Saved Properties", :controller => $master_user_name, :action => "homesearch", :id => @profile,:name => "R", :method => :post,:p_id=>@p_id%>	</li>
+								<li><%=link_to "Change Password", :controller => $master_user_name, :action => "userchangepwd", :id => @profile%></li>
+								<li><%=link_to " Logout", :controller => $master_user_name, :action => "userlogout", :id => @profile,:name => "Residential", :method => :post%>	</li>
+			 
+			 				</ul>
+						</li>
+					</ul>
+				<%end%>
+				
+				
+							
+     
 		 
 					
 			
@@ -277,22 +291,11 @@ border: 2px;
 			<%end%>	
 		   </ul>
 			
-		  <ul class="nav pull-right">
+		<ul class="nav pull-right">
 		   <%if $adminflag=="a" then%>
            <li><%=link_to "Change Password", :controller => $master_user_name, :action => "changepwd", :id => @profile%></li>
 		   <%end%>
-		   
-			
-
-			
-			
-		
-			
-				
-				
-				
-				
-			</ul>
+		</ul>
 		  
         </div>
       </div>
