--- a/app/views/real/contact.html.erb
+++ b/app/views/real/contact.html.erb
@@ -10,8 +10,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
 
 	<!-- stylesheets -->
-  	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  	<link rel="stylesheet" href="css/slide.css" type="text/css" media="screen" />
+  	<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
+  	<link rel="stylesheet" href="/css/slide.css" type="text/css" media="screen" />
 	
   	<!-- PNG FIX for IE6 -->
   	<!-- http://24ways.org/2007/supersleight-transparent-png-in-ie6 -->
@@ -20,9 +20,9 @@
 	<![endif]-->
 	 
     <!-- jQuery - the core -->
-	<script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
+	<script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
 	<!-- Sliding effect -->
-	<script src="js/slide.js" type="text/javascript"></script>
+	<script src="/js/slide.js" type="text/javascript"></script>
 	
   
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY0kkJiTPVd2U7aTOAwhc9ySH6oHxOIYM&sensor=false">
@@ -188,8 +188,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 	    
 			<%= form_tag("/real/contact/", :method=>"post") do %>
 			
-			 <fieldset style="height: 100%;width:100%; background-color:; color: #000000; border: 2px solid black;padding-left:20px;background-image:
-		url('/images/back1.jpg')">
+			 <fieldset style="height: 100%;width:100%; background-color:#BDBDBD; color: #000000; border: 2px solid black;padding-left:20px;">
 			
 			
 		
@@ -239,8 +238,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 
 		<div  style="float:right;height:100%; width:25%;">
-			<fieldset style="height:100%;width:100%; background-color: ; color: #000000; border: 2px solid black;background-image:
-		url('/images/back1.jpg')">
+			<fieldset style="height:100%;width:100%; background-color:#BDBDBD ; color: #000000; border: 2px solid black;">
 			
 			<div >
 				<div class="wellside" style="height:10%;">
